[package]
name = "differential-equations"
version = "0.5.2"
authors = ["Ryan D. Gast <ryan.d.gast@gmail.com>"]
description = "A Rust library for solving differential equations."
edition = "2024"

documentation = "https://docs.rs/differential-equations"
homepage = "https://github.com/Ryan-D-Gast/differential-equations"
repository = "https://github.com/Ryan-D-Gast/differential-equations"
readme = "README.md"

keywords = ["differential", "equations", "solver", "ode", "ivp"]
categories = ["science", "mathematics", "algorithms"]

license = "Apache-2.0"

include = [
    "src/**/*",
    "docs/**/*",
    "examples/**/*",
    "assets/*",
    "README.md",
    "CHANGELOG.md",
    "LICENSE"
]
exclude = [
    "examples/**/target/*",
]

[features]
default = []
polars = ["dep:polars"]
serde = ["dep:serde"]
wasm = ["dep:web-time"]

[dependencies]
nalgebra = "^0.34.0" # Linear algebra library for matrix operations
num-complex = "^0.4.6" # Complex number support
differential-equations-derive = "0.1.3" # Derives State trait on structs
polars = { version = "^0.47.1", optional = true } # DataFrame integration for the solution
serde = { version = "1.0.228", features = ["derive"], optional = true } # solution serialization/deserialization
web-time = { version = "1.1.0", optional = true } # std::time::Instant support in the browser

[dev-dependencies]
quill = "0.2.0" # Plotting for examples
criterion = { version = "0.5.1", features = ["html_reports"] } # Benchmarking library
rand = "0.9.0" # Random number generation for SDE examples
rand_distr = "0.5.1" # Random distributions for SDE examples

# Ordinary Differential Equation (ODE) examples
[[example]]
name = "ode_01_exponential_growth"
path = "examples/ode/01_exponential_growth/main.rs"

[[example]]
name = "ode_02_harmonic_oscillator"
path = "examples/ode/02_harmonic_oscillator/main.rs"

[[example]]
name = "ode_03_logistic_growth"
path = "examples/ode/03_logistic_growth/main.rs"

[[example]]
name = "ode_04_sir_model"
path = "examples/ode/04_sir_model/main.rs"

[[example]]
name = "ode_05_damped_pendulum"
path = "examples/ode/05_damped_pendulum/main.rs"

[[example]]
name = "ode_06_integration"
path = "examples/ode/06_integration/main.rs"

[[example]]
name = "ode_07_cr3bp"
path = "examples/ode/07_cr3bp/main.rs"

[[example]]
name = "ode_08_damped_oscillator"
path = "examples/ode/08_damped_oscillator/main.rs"

[[example]]
name = "ode_09_matrix_ode"
path = "examples/ode/09_matrix_ode/main.rs"

[[example]]
name = "ode_10_custom_solout"
path = "examples/ode/10_custom_solout/main.rs"

[[example]]
name = "ode_11_schrodinger"
path = "examples/ode/11_schrodinger/main.rs"

[[example]]
name = "ode_12_brusselator"
path = "examples/ode/12_brusselator/main.rs"

[[example]]
name = "ode_13_vanderpol"
path = "examples/ode/13_vanderpol/main.rs"

# Differential-Algebraic Equation (DAE) examples
[[example]]
name = "dae_01_amplifier"
path = "examples/dae/01_amplifier/main.rs"

[[example]]
name = "dae_02_robertson"
path = "examples/dae/02_robertson/main.rs"

[[example]]
name = "dae_03_pendulum"
path = "examples/dae/03_pendulum/main.rs"

# Stochastic Differential Equation (SDE) examples
[[example]]
name = "sde_01_brownian_motion"
path = "examples/sde/01_brownian_motion/main.rs"

[[example]]
name = "sde_02_heston_model"
path = "examples/sde/02_heston_model/main.rs"

[[example]]
name = "sde_03_ornstein_uhlenbeck"
path = "examples/sde/03_ornstein_uhlenbeck/main.rs"

# Delay Differential Equation (DDE) examples
[[example]]
name = "dde_01_mackey_glass"
path = "examples/dde/01_mackey_glass/main.rs"

[[example]]
name = "dde_02_breast_cancer_model"
path = "examples/dde/02_breast_cancer_model/main.rs"

# Benchmarks
[[bench]]
name = "ode_solver_benchmarks"
harness = false
path = "benches/main.rs"
